[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Music/Chasing-Villains.mp3" type="AudioStream" id=1]
[ext_resource path="res://Resources/Fonts/Rocker.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/Screens/HelpScreen.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UI/PauseUI.gd" type="Script" id=4]

[node name="PauseUI" type="Control"]
pause_mode = 2
script = ExtResource( 4 )

[node name="PauseMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 1 )

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
pause_mode = 2
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.00392157, 0.00392157, 0.00392157, 0.372549 )

[node name="Panel" type="Panel" parent="PauseMenu/ColorRect"]
pause_mode = 2
margin_left = 194.0
margin_top = 49.0
margin_right = 442.0
margin_bottom = 291.0

[node name="Label" type="Label" parent="PauseMenu/ColorRect/Panel"]
margin_left = 92.0
margin_top = 16.0
margin_right = 156.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ColorRect/Panel"]
pause_mode = 2
margin_left = 37.0
margin_top = 53.0
margin_right = 210.0
margin_bottom = 230.0
custom_constants/separation = 10

[node name="ResumeBtn" type="Button" parent="PauseMenu/ColorRect/Panel/VBoxContainer"]
margin_right = 173.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "RESUME"

[node name="RestartBtn" type="Button" parent="PauseMenu/ColorRect/Panel/VBoxContainer"]
margin_top = 37.0
margin_right = 173.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "RESTART"

[node name="HelpBtn" type="Button" parent="PauseMenu/ColorRect/Panel/VBoxContainer"]
margin_top = 74.0
margin_right = 173.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 2 )
text = "HELP"

[node name="Placeholder" type="Button" parent="PauseMenu/ColorRect/Panel/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 111.0
margin_right = 173.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 2 )

[node name="MainBtn" type="Button" parent="PauseMenu/ColorRect/Panel/VBoxContainer"]
margin_top = 148.0
margin_right = 173.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 2 )
text = "MAIN MENU"

[node name="PauseHelp" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="PauseHelp"]
position = Vector2( 320.563, 181 )
scale = Vector2( 0.500683, 0.50625 )
texture = ExtResource( 3 )

[node name="BackBtn" type="Button" parent="PauseHelp"]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 235.0
margin_top = 318.0
margin_right = 406.0
margin_bottom = 344.0

[connection signal="pressed" from="PauseMenu/ColorRect/Panel/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/Panel/VBoxContainer/RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/Panel/VBoxContainer/HelpBtn" to="." method="_on_HelpBtn_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/Panel/VBoxContainer/MainBtn" to="." method="_on_MainBtn_pressed"]
[connection signal="pressed" from="PauseHelp/BackBtn" to="." method="_on_BackBtn_pressed"]
